--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ img:hover{
 .centeredContent{
     margin-left: auto;
     margin-right: auto;
-    width: 80vw;
+    width: 90vw;
     max-width: 1000px;
     hyphens: auto;
 }
